Fixed misaligned cursor issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -16,11 +16,6 @@ a {
   text-decoration: none;
 }
 
-span {
-  line-height: 11px;
-  vertical-align: 50%;
-}
-
 .window {
   position: absolute;
   background: #fff;
@@ -72,7 +67,7 @@ span {
   padding-left: 8px;
   padding-top: 3px;
   float: left;
-  line-height: 0px;
+  line-height: 7pt;
   font-weight: 300;
 }
 
